WebCore/accessibility/AccessibilityListBoxOption.cpp
@@ -110,17 +110,12 @@ bool AccessibilityListBoxOption::accessibilityIsIgnored() const
     if (!m_optionElement)
         return true;
     
-    if (equalIgnoringCase(getAttribute(m_optionElement, aria_hiddenAttr), "true"))
+    if (equalIgnoringCase(getAttribute(aria_hiddenAttr), "true"))
         return true;
     
     return parentObject()->accessibilityIsIgnored();
 }
     
-String AccessibilityListBoxOption::language() const
-{
-    return AccessibilityObject::language(m_optionElement);
-}
-
 bool AccessibilityListBoxOption::canSetSelectedAttribute() const
 {
     if (!m_optionElement)
@@ -144,7 +139,7 @@ String AccessibilityListBoxOption::stringValue() const
     if (!m_optionElement)
         return String();
     
-    const AtomicString& ariaLabel = getAttribute(m_optionElement, aria_labelAttr);
+    const AtomicString& ariaLabel = getAttribute(aria_labelAttr);
     if (!ariaLabel.isNull())
         return ariaLabel;
     
